--- a/index.html
+++ b/index.html
@@ -24,22 +24,40 @@
                    return "It's a tie!";
                }
                else if (playerSelection != computerSelection) {
-                   if (playerSelection == 'rock' && computerSelection == 'paper') {
+                   if (
+                       playerSelection == 'rock' 
+                       && computerSelection == 'paper'
+                    ) {
                         return "You Lose! Paper beats Rock";
                    }
-                   else if (playerSelection == 'scissors' && computerSelection == 'rock') {
+                   else if (
+                       playerSelection == 'scissors' 
+                       && computerSelection == 'rock'
+                    ) {
                        return "You Lose! Rock beats Scissors";
                    }
-                   else if (playerSelection == 'paper' && computerSelection == 'scissors') {
+                   else if (
+                       playerSelection == 'paper' 
+                       && computerSelection == 'scissors'
+                    ) {
                        return "You Lose! Scissors beats Paper";
                    }
-                   else if (playerSelection == 'rock' && computerSelection == 'scissors') {
+                   else if (
+                       playerSelection == 'rock' 
+                       && computerSelection == 'scissors'
+                    ) {
                        return "You Win! Rock beats Scissors";
                    }
-                   else if (playerSelection == 'scissors' && computerSelection == 'paper') {
+                   else if (
+                       playerSelection == 'scissors' 
+                       && computerSelection == 'paper'
+                    ) {
                        return "You Win! Scissors beats Paper";
                    }
-                   else if (playerSelection == 'paper' && computerSelection == 'rock') {
+                   else if (
+                       playerSelection == 'paper' 
+                       && computerSelection == 'rock'
+                    ) {
                        return "You Win! Paper beats Rock";
                    }
                }
